[metadata]
name = passutil
version = 2.0.0
author = Aaron Stanek
author_email = amr.stanek@gmail.com
description = Generates cryptographically random passwords of any desired length.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaronstanek/PythonPasswordUtility
project_urls =
    Bug Tracker = https://github.com/aaronstanek/PythonPasswordUtility/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src